--- a/Lab03/Lab03.csproj
+++ b/Lab03/Lab03.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sekil.cs" />
-    <Compile Include="Ucgen.cs" />
+    <Compile Include="Dikucgen.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
